added save statement to db initial implementation
